Squach commit
    Previous rebase fucked up the entire commit history.
    All commits have been squashed into one.
    Tickets included in squash:
    UF-10368
    UF-10583
    UF-10584
    UF-10585
    UF-10590
    UF-10806
    UF-10838
    UF-10863
    UF-10864
    UF-10888
    UF-10927
    UF-10928
    UF-10929
    UF-10932